crates/uitest/fixtures/ty_check/method_bound/arg_bound.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/method_bound/arg_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ arg_bound.fe:56:5
   │
56 │     extract(s)
   │     ^^^^^^^ `S` doesn't implement `Extract`

error[6-0003]: trait bound is not satisfied
   ┌─ arg_bound.fe:59:5
   │
59 │     extract(opt)
   │     ^^^^^^^ `i32` doesn't implement `Clone`


